@@ -3,6 +3,7 @@ Version: 0.3.1
 Date: 04. 11. 2021
   Bugfixes:
     - Now correctly resets state on reset.
+    - Can no longer exit car in round start countdown.
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.0
 Date: 30. 10. 2021
